--- a/cart-project/package.json
+++ b/cart-project/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@nextui-org/react": "^2.4.8",
     "@reduxjs/toolkit": "^2.3.0",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^11.11.11",
     "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
