--- a/cart-project/package.json
+++ b/cart-project/package.json
@@ -15,6 +15,7 @@
     "@nextui-org/react": "^2.4.8",
     "@reduxjs/toolkit": "^2.3.0",
     "framer-motion": "^11.11.11",
+    "iconsax-react": "^0.0.8",
     "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
